--- a/index.html
+++ b/index.html
@@ -1,7 +1,34 @@
-<!DOCTYPE html>
 <html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  width: 40%;
+}
+
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+.container {
+  padding: 2px 16px;
+}
+</style>
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+
+<h2>Card</h2>
+
+<div class="card">
+  <img src="images/profile.png" alt="Avatar" style="width:100%">
+  <div class="container">
+    <h4><b>Goutam Das</b></h4>
+    <p>Senior Software Engineer and ML Engineer</p>
+  </div>
+
+</div>
+
 </body>
 </html>
