--- a/index.html
+++ b/index.html
@@ -2,33 +2,32 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
+
 .card {
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
   width: 40%;
 }
 
 .card:hover {
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
 
 .container {
   padding: 2px 16px;
 }
+
 </style>
 </head>
 <body>
 
-<h2>Card</h2>
-
 <div class="card">
   <img src="images/profile.png" alt="Avatar" style="width:100%">
   <div class="container">
-    <h4><b>Goutam Das</b></h4>
+    <h1><b>Goutam Das</b></h1>
     <p>Senior Software Engineer and ML Engineer</p>
   </div>
 
 </div>
-
 </body>
 </html>
