neutrino app web given

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="dual_list_demo">
+  <meta name="apple-mobile-web-app-title" content="neutrino_app">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
-  <title>dual_list_demo</title>
+  <title>neutrino_app</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
@@ -34,7 +34,7 @@
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
   <script>
-    var serviceWorkerVersion = '1317734346';
+    var serviceWorkerVersion = '3185510551';
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
